# Make-It-Stand

./: CMakeLists.txt  README.md
include/: CompFab.h  ConvexHull.h  Voxelizer.h
source/: CompFab.cpp  Voxelizer.cpp  main.cpp
tex/: CF_Alessandro-Gobbetti_ProjectReport.aux  CF_Alessandro-Gobbetti_ProjectReport.bbl  CF_Alessandro-Gobbetti_ProjectReport.blg  CF_Alessandro-Gobbetti_ProjectReport.brf  CF_Alessandro-Gobbetti_ProjectReport.fdb_latexmk  CF_Alessandro-Gobbetti_ProjectReport.fls  CF_Alessandro-Gobbetti_ProjectReport.tex  CF_Alessandro-Gobbetti_ProjectReport.toc  bibliography.bib
tex/_minted-CF_Alessandro-Gobbetti_ProjectReport/: 05C045A96DD9FDC64380C34F9A17ADE3F3EBCA14C18ACDFE112169B986744AFD.pygtex  10AB1B5CE39D1CAE07C24AD8C6E336AAF3EBCA14C18ACDFE112169B986744AFD.pygtex  17117DA964058BAECE36B3B92475BF0AF3EBCA14C18ACDFE112169B986744AFD.pygtex  21B0054B8023DA05A0E38CC9085AA601F3EBCA14C18ACDFE112169B986744AFD.pygtex  251E088A393148B287689FBD21EBD4E6F3EBCA14C18ACDFE112169B986744AFD.pygtex  262BEC96D025471EA73608F9B1A07F5CF3EBCA14C18ACDFE112169B986744AFD.pygtex  3592515622452024F803E61169E4849DF3EBCA14C18ACDFE112169B986744AFD.pygtex  5AB6FB8BC4E43974C6E06DF8C90D3848F3EBCA14C18ACDFE112169B986744AFD.pygtex  5DB995C06D0ACFD14F809E5E08356E7BF3EBCA14C18ACDFE112169B986744AFD.pygtex  96673401ACF2C311D80ECD7F98144F8BF3EBCA14C18ACDFE112169B986744AFD.pygtex  D30802C33DDEEF530861FC4941C8B739F3EBCA14C18ACDFE112169B986744AFD.pygtex  F48E47D00A9D6E2189029D16EC102DE1F3EBCA14C18ACDFE112169B986744AFD.pygtex
